<resources>
    <string name="app_name">DHMS</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="username_email">Username/Email</string>
    <string name="password_text">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="register">Register</string>
    <string name="login_text">LOGIN</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="m_license">M-License</string>
    <string name="hospital">Hospital</string>
    <string name="doctor_specialization">Doctor Specialization</string>
    <string name="qualification">Qualification</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="profile_generated_succesfully">Profile Generated Succesfully</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="existing_health_issues">Existing Health issues</string>
    <string name="dob">DOB</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
</resources>