<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"

        tools:context=".view.doctor.patient_registration">


        <TextView
            android:id="@+id/patient_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_registration"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:labelFor="@id/editTextTextPersonName"
            android:text="@string/first_name"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_textview" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/first_name"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/editTextTextPersonName2"
            android:text="@string/last_name"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="@string/last_name"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/dob_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/phone_edittext"
            android:text="@string/dob"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName2" />

        <EditText
            android:id="@+id/dob_edittext"
            android:layout_width="154dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/phone"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.712"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dob_textview" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/phone_edittext"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

        <EditText
            android:id="@+id/phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/Existing_health_edittext"
            android:text="@string/existing_health_issues"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_edittext" />

        <EditText
            android:id="@+id/Existing_health_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="@string/m_license"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/spinner_gender"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_gender"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Existing_health_edittext" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/holo_red_dark"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="40dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
